// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LiveProgressIndicator > renders live status and tracks click with enriched payload 1`] = `
<section
  aria-label="Live progress indicator"
  class="space-y-3 rounded-xl border border-[var(--color-border)] bg-[var(--color-surface)] p-5 shadow-sm"
  data-state="live"
  data-variant="emphasized"
>
  <div
    class="flex items-center justify-between gap-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <span
        aria-hidden="true"
        class="h-2.5 w-2.5 rounded-full bg-[var(--color-success)] motion-safe:animate-pulse"
      />
      <span
        class="sr-only"
      >
        Live status
      </span>
      <p
        class="text-sm font-medium text-[var(--color-text)]"
      >
        Live updates on
      </p>
    </div>
    <p
      aria-label="Live event timestamp"
      class="text-xs text-[var(--color-text-muted)]"
    >
      7:00:00 PM
    </p>
  </div>
  <p
    class="text-xs text-[var(--color-text-muted)]"
  >
    If realtime is unavailable, PulsePlate stays usable and keeps CTA flow active.
  </p>
  <div>
    <a
      class="rounded-xl font-semibold transition-all active:scale-95 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[var(--color-primary)] motion-reduce:transition-none motion-reduce:active:scale-100 disabled:cursor-not-allowed disabled:opacity-60 bg-[var(--color-primary)] text-[var(--color-primary-foreground)] hover:opacity-95 hover:shadow-md min-h-[44px] px-6 py-3 text-sm  inline-flex rounded-lg px-5 py-2.5"
      data-discover="true"
      href="/setup"
    >
      Refresh setup inputs
    </a>
  </div>
</section>
`;

exports[`LiveProgressIndicator > renders static fallback and tracks impressions 1`] = `
<section
  aria-label="Live progress indicator"
  class="space-y-3 rounded-xl border border-[var(--color-border)] bg-[var(--color-surface)] p-4"
  data-state="static"
  data-variant="compact"
>
  <div
    class="flex items-center justify-between gap-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <span
        aria-hidden="true"
        class="h-2.5 w-2.5 rounded-full bg-[var(--color-warning)]"
      />
      <span
        class="sr-only"
      >
        Pending status
      </span>
      <p
        class="text-sm font-medium text-[var(--color-text)]"
      >
        Static fallback
      </p>
    </div>
  </div>
  <p
    class="text-xs text-[var(--color-text-muted)]"
  >
    If realtime is unavailable, PulsePlate stays usable and keeps CTA flow active.
  </p>
  <div>
    <a
      class="rounded-xl font-semibold transition-all active:scale-95 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[var(--color-primary)] motion-reduce:transition-none motion-reduce:active:scale-100 disabled:cursor-not-allowed disabled:opacity-60 bg-[var(--color-primary)] text-[var(--color-primary-foreground)] hover:opacity-95 hover:shadow-md min-h-[44px] px-6 py-3 text-sm  inline-flex rounded-lg px-4 py-2"
      data-discover="true"
      href="/progress"
    >
      Open progress live
    </a>
  </div>
</section>
`;
